force-app/main/default/objects/Activity/fields/Follow_up_Created_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Follow_up_Created_Date_Time__c</fullName>
    <formula>CreatedDate</formula>
    <label>Follow up Created Date/Time</label>
    <type>DateTime</type>
</CustomField>