force-app/main/default/objects/Activity/fields/In_Out_of_SLA__c.field-meta.xml
<CustomField>
    <fullName>In_Out_of_SLA__c</fullName>
    <formula>IF( Overdue__c = true, &quot;Out of SLA&quot;, &quot;In SLA&quot;)</formula>
    <label>In / Out of SLA</label>
    <type>Text</type>
</CustomField>