force-app/main/default/objects/Activity/fields/Overdue__c.field-meta.xml
<CustomField>
    <fullName>Overdue__c</fullName>
    <formula>IF( Due_Date_Time__c &lt;  NOW() &amp;&amp; ISBLANK(CompletedDateTime), TRUE , IF(CompletedDateTime &gt; Due_Date_Time__c, TRUE, FALSE))</formula>
    <label>Overdue</label>
    <type>Checkbox</type>
</CustomField>